added reference for SOLID

--- a/cs/kap04.tex
+++ b/cs/kap04.tex
@@ -114,7 +114,7 @@ Tuto komponentu v našem případě umístíme do kořenového objektu meče\foo
 
 \subsection{Zhodnocení návrhu} 
 
-Skutečnou míru kvality našeho návrhu poznáme až po dlouhých letech jeho neodvratného živelného vývoje v praktickém nasazení, nyní můžeme nanejvýše prohlásit, že náš návrh se zdá být v souladu s principy SOLID. 
+Skutečnou míru kvality našeho návrhu poznáme až po dlouhých letech jeho neodvratného živelného vývoje v praktickém nasazení, nyní můžeme nanejvýše prohlásit, že náš návrh se zdá být v souladu s principy SOLID \cite{CleanArchitectureSOLID}. 
 
 Herní systém jsme dekomponovali do soustavy herních objektů s komponentami - základem jsou šermíř a meč, které uzavíráme do společného předka majícího úkol pospojovat je navzájem a s vnějším světěm. 
 
