--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -59,6 +59,15 @@
 }
 
 
+@book{CleanArchitectureSOLID,
+  author         = {C. Martin, Robert},
+  publisher      = {Pearson Education, Inc.},
+  title          = {Clean Architecture - A Craftman's guide to software structure and design},
+  year           = {2018}
+}
+
+
+
 @software{DieByTheSword,
   author = {{Treyarch Corporation}},
   title = {Die by the Sword},
